Change name to PennSchedule

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <!-- <link rel="stylesheet" href="css/main.css"> -->
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/bootstrap-theme.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
@@ -33,7 +34,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">FriendSchedule</a>
+          <a class="navbar-brand" href="index.html">PennSchedule</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
