Add jumbotron header

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
         </div>
       </div>
     </div>
+    <div class="jumbotron">
+      <h1>Scheduling with friends</h1>
+      <p>Find shared classes and when your friends are free</p>
+      <a href="schedule.html" class="btn btn-primary btn-lg">Start a Shared Schedule</a>
+    </div>
   </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
