--- a/index.html
+++ b/index.html
@@ -54,6 +54,17 @@
       <a href="schedule.html" class="btn btn-primary btn-lg">Start a Shared Schedule</a>
     </div>
   </div>
+  <div class="container">
+    <div class="row text-center footer">
+      <div class="col-lg-4 col-lg-offset-4">
+	<div class="well">
+	  PennApps
+	  <img src="nrYa7Cu.png" alt="PennApps Fall 2013" height="75px";>
+	  Fall 2013
+	</div>
+      </div>
+    </div>
+  </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
