Huge update to homepage

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <!-- <link rel="stylesheet" href="css/main.css"> -->
-	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/bootstrap-theme.css">
+	<link rel="stylesheet" href="css/style.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+
+	<!-- Fonts -->
+	<link href="http://fonts.googleapis.com/css?family=Rancho|Open+Sans" rel="stylesheet" type="text/css">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -52,6 +55,29 @@
       <h1>Scheduling with friends</h1>
       <p>Find shared classes and when your friends are free</p>
       <a href="schedule.html" class="btn btn-primary btn-lg">Start a Shared Schedule</a>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+	<div class="well">
+	  <h2>Technologies</h2>
+	  <p>PennSchedule is built on the Flask web framework and stores none of your personal information on the cloud. Backend is mainly Python, though front end rendering with Javascript utilized as well.</p>
+	  <a href="humans.txt" class="btn btn-info">More info</a>
+	</div>
+      </div>
+      <div class="col-md-6">
+	<div class="well">
+	  <h2>PennApps Team</h2>
+          <p>PennSchedule is proudly presented to you by:
+          </p><ul>
+              <li>Adel Qalieh</li>
+              <li>Prakhar Bhandari</li>
+              <li>David Lakata</li>
+	      <li>Darshan Lingaraj</li>
+          </ul>
+          <p>Thanks for stopping by! Feel free to contact us at any time.</p>
+          <a href="contact.html" class="btn btn-info">Contact the Team</a>
+        </div>
+      </div>
     </div>
   </div>
   <div class="container">
