Move UPenn logo into img folder

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="col-lg-4 col-lg-offset-4">
 	<div class="well">
 	  PennApps
-	  <img src="nrYa7Cu.png" alt="PennApps Fall 2013" height="75px";>
+	  <img src="img/nrYa7Cu.png" alt="PennApps Fall 2013" height="75px";>
 	  Fall 2013
 	</div>
       </div>
