Update help image

--- a/schedule.html
+++ b/schedule.html
@@ -63,7 +63,7 @@
 	  </li>
 	    <li><h4>Click <em>Export as iCalendar</em></h4>
 	      <p><small>Small print under the schedule; remember where you're saving the files for later!</small></p>
-	      <p><img src="img/70ICriQ.png" alt=""></p>
+	      <p><img src="img/WEGK7Iu.png" alt=""></p>
 	    </li>
 	  <li><h4>Repeat process for each friend :)</h4></li>
 	</h4></ol>
